projection updates
