# obsrvr-lake/stellar-query-api/go/docs/swagger.yaml
@@ -221,16 +221,24 @@ definitions:
     properties:
       contract_id:
         type: string
+      contract_type:
+        type: string
       created_at:
         type: string
       created_ledger:
         type: integer
       creator_address:
         type: string
+      display_name:
+        type: string
+      estimated_monthly_rent_stroops:
+        type: integer
       exported_functions:
         items:
           $ref: '#/definitions/main.FunctionCallCount'
         type: array
+      instance_entries:
+        type: integer
       n_exports:
         type: integer
       n_functions:
@@ -239,10 +247,18 @@ definitions:
         type: integer
       persistent_entries:
         type: integer
+      temporary_entries:
+        type: integer
       total_entries:
         type: integer
+      total_state_size_bytes:
+        type: integer
+      verified:
+        type: boolean
       wasm_hash:
         type: string
+      wasm_size_bytes:
+        type: integer
     type: object
   main.DecodedOperation:
     properties:
